test_suite/tests/ui/duplicate-attribute/rename-ser-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/rename-ser-ser.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

